[package]
name = "dts"
version = "0.5.4"
authors = ["Martin Ohmann <martinohmann@gmail.com>"]
license = "MIT"
description = "A tool to deserialize, transform and serialize data between different encodings"
repository = "https://github.com/martinohmann/dts"
documentation = "https://docs.rs/dts/"
keywords = ["hcl", "json", "yaml", "jq"]
categories = ["encoding"]
readme = "README.md"
edition = "2021"
exclude = [
    ".github/",
]

[features]
default = ["color", "jaq"]
color = ["bat", "bat/paging", "clap/color"]
jaq = ["jaq-core", "jaq-std"]

[dependencies]
anyhow = "1.0.71"
atty = "0.2.14"
crossbeam-utils = "0.8.14"
csv = "1.1.6"
glob = "0.3.0"
clap_complete = "3.2.4"
grep-cli = "0.1.6"
hcl-rs = "0.10.0"
jaq-core = { version = "0.10.0", optional = true }
jaq-std = { version = "0.10.0", optional = true }
json5 = "0.4.1"
once_cell = "1.16.0"
pathdiff = "0.2.1"
pest = "2.5.5"
pest_derive = "2.3.1"
rayon = "1.5.3"
regex = "1.7.3"
serde-xml-rs = "0.6.0"
serde_qs = "0.10.1"
serde_yaml = "0.9.21"
shell-words = "1.1.0"
termcolor = "1.1.3"
thiserror = "1.0.40"
toml = "0.7.4"
unescape = "0.1.0"
ureq = "2.5.0"
url = "2.4.0"

[dependencies.bat]
optional = true
default-features = false
features = ["regex-onig"]
version = "0.22.1"

[dependencies.clap]
default-features = false
features = ["std", "derive", "env", "suggestions"]
version = "3.2.22"

[dependencies.serde]
features = ["derive"]
version = "1.0.164"

[dependencies.serde_json]
features = ["preserve_order"]
version = "1.0.96"

[dev-dependencies]
assert_cmd = "2.0.8"
criterion = "0.4"
pretty_assertions = "1.3.0"
predicates = "2.1.1"
temp-env = "0.3.1"

[[bench]]
name = "benchmark"
harness = false

[[test]]
name = "integration"
path = "tests/integration_tests.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
