[package]
name = "dts"
version = "0.5.11"
authors = ["Martin Ohmann <martinohmann@gmail.com>"]
license = "MIT"
description = "A tool to deserialize, transform and serialize data between different encodings"
repository = "https://github.com/martinohmann/dts"
documentation = "https://docs.rs/dts/"
keywords = ["hcl", "json", "yaml", "jq"]
categories = ["encoding"]
readme = "README.md"
edition = "2021"
exclude = [
    ".github/",
]

[features]
default = ["color", "jaq"]
color = ["bat", "bat/paging", "clap/color"]
jaq = ["jaq-core", "jaq-std"]

[dependencies]
anyhow = "1.0.71"
crossbeam-utils = "0.8.16"
csv = "1.2.2"
glob = "0.3.1"
clap_complete = "3.2.4"
grep-cli = "0.1.8"
hcl-rs = { version = "0.16.0", features = ["perf"] }
jaq-core = { version = "0.10.0", optional = true }
jaq-std = { version = "0.10.0", optional = true }
json5 = "0.4.1"
once_cell = "1.19.0"
pathdiff = "0.2.1"
pest = "2.7.7"
pest_derive = "2.7.7"
rayon = "1.7.0"
regex = "1.7.3"
serde-xml-rs = "0.6.0"
serde_qs = "0.12.0"
serde_yaml = "0.9.31"
shell-words = "1.1.0"
termcolor = "1.4.1"
thiserror = "1.0.43"
toml = "0.8.10"
unescape = "0.1.0"
ureq = "2.5.0"
url = "2.4.0"

[dependencies.bat]
optional = true
default-features = false
features = ["regex-onig"]
version = "0.22.1"

[dependencies.clap]
default-features = false
features = ["std", "derive", "env", "suggestions"]
version = "3.2.22"

[dependencies.serde]
features = ["derive"]
version = "1.0.196"

[dependencies.serde_json]
features = ["preserve_order"]
version = "1.0.110"

[dev-dependencies]
assert_cmd = "2.0.14"
criterion = "0.4"
pretty_assertions = "1.4.0"
predicates = "3.0.3"
temp-env = "0.3.1"

[[bench]]
name = "benchmark"
harness = false

[[test]]
name = "integration"
path = "tests/integration_tests.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.6.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "aarch64-unknown-linux-gnu",
  "arm-unknown-linux-gnueabihf",
  "arm-unknown-linux-musleabihf",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
