[package]
name = "dts"
version = "0.6.5"
authors = ["Martin Ohmann <martinohmann@gmail.com>"]
license = "MIT"
description = "A tool to deserialize, transform and serialize data between different encodings"
repository = "https://github.com/martinohmann/dts"
documentation = "https://docs.rs/dts/"
keywords = ["hcl", "json", "yaml", "jq"]
categories = ["encoding"]
readme = "README.md"
edition = "2021"
exclude = [
    ".github/",
]

[features]
default = ["color", "jaq"]
color = ["bat", "bat/paging", "clap/color"]
jaq = ["jaq-core", "jaq-interpret", "jaq-parse", "jaq-std"]

[dependencies]
anyhow = "1.0.86"
crossbeam-utils = "0.8.16"
csv = "1.2.2"
glob = "0.3.1"
clap_complete = "4.5.1"
grep-cli = "0.1.8"
hcl-rs = { version = "0.18.0", features = ["perf"] }
jaq-core = { version = "1.4.0", optional = true }
jaq-interpret = { version = "1.4.0", optional = true }
jaq-parse = { version = "1.0.2", optional = true }
jaq-std = { version = "1.4.0", optional = true }
json5 = "0.4.1"
once_cell = "1.19.0"
pathdiff = "0.2.1"
pest = "2.7.7"
pest_derive = "2.7.7"
rayon = "1.7.0"
regex = "1.7.3"
serde-xml-rs = "0.6.0"
serde_qs = "0.13.0"
serde_yaml = "0.9.34"
shell-words = "1.1.0"
termcolor = "1.4.1"
thiserror = "1.0.59"
toml = "0.8.12"
unescape = "0.1.0"
ureq = "2.9.7"
url = "2.4.0"

[dependencies.bat]
optional = true
default-features = false
features = ["regex-onig"]
version = "0.24.0"

[dependencies.clap]
default-features = false
features = ["std", "derive", "env", "help", "suggestions"]
version = "4.5.4"

[dependencies.serde]
features = ["derive"]
version = "1.0.203"

[dependencies.serde_json]
features = ["preserve_order"]
version = "1.0.119"

[dev-dependencies]
assert_cmd = "2.0.14"
criterion = "0.5"
pretty_assertions = "1.4.0"
predicates = "3.0.3"
temp-env = "0.3.1"

[[bench]]
name = "benchmark"
harness = false

[[test]]
name = "integration"
path = "tests/integration_tests.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
