[package]
name = "dts-core"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1.6"
glob = "0.3.0"
hcl = { path = "../hcl" }
dts-json = { path = "../dts-json" }
json5 = "0.4.1"
pathdiff = "0.2.1"
regex = "1.5.4"
serde-xml-rs = "0.5.1"
serde_qs = "0.8.5"
serde_yaml = "0.8.21"
thiserror = "1.0.30"
toml = "0.5.8"
ureq = "2.3.0"
url = "2.2.2"
pest = "2.1.3"
pest_derive = "2.1.0"
rayon = "1.5.1"

[dependencies.clap]
default-features = false
features = ["std", "derive"]
version = "= 3.0.0-rc.7"

[dependencies.serde]
features = ["derive"]
version = "1.0.130"

[dependencies.serde_json]
features = ["preserve_order"]
version = "1.0.68"

[dev-dependencies]
pretty_assertions = "1.0.0"
