[package]
name = "dts-core"
version = "0.2.6"
authors = ["Martin Ohmann <martinohmann@gmail.com>"]
license = "MIT"
description = "Core functionality of dts"
repository = "https://github.com/martinohmann/dts"
documentation = "https://docs.rs/dts-core/"
categories = ["encoding"]
readme = "README.md"
edition = "2021"

[dependencies]
csv = "1.1.6"
glob = "0.3.0"
hcl-rs = "0.3.3"
json5 = "0.4.1"
once_cell = "1.10.0"
pathdiff = "0.2.1"
regex = "1.5.5"
serde-xml-rs = "0.5.1"
serde_qs = "0.9.1"
serde_yaml = "0.8.21"
thiserror = "1.0.30"
toml = "0.5.8"
ureq = "2.3.0"
url = "2.2.2"
pest = "2.1.3"
pest_derive = "2.1.0"
rayon = "1.5.1"

[dependencies.clap]
default-features = false
features = ["std", "derive"]
version = "= 3.0.0-rc.7"

[dependencies.serde]
features = ["derive"]
version = "1.0.136"

[dependencies.serde_json]
features = ["preserve_order"]
version = "1.0.79"

[dev-dependencies]
pretty_assertions = "1.2.1"
